force-app/main/default/objects/Audit_Severity__mdt/Audit_Severity__mdt.object-meta.xml
<CustomObject>
    <description>Stores the severity level mapping for each Salesforce Setup Audit Trail action code. Each record represents one action code (e.g. createUser, changeprofileforuser) and its corresponding severity classification (LOW, MEDIUM, HIGH, CRITICAL). Used by AuditTrailSeverityService to dynamically assign severity on Audit_Trail__c records without hardcoded logic.</description>
    <label>Audit Severity</label>
    <pluralLabel>Audit Severities</pluralLabel>
</CustomObject>