force-app/main/default/objects/Audit_Severity__mdt/fields/Action_Score__c.field-meta.xml
<CustomField>
    <fullName>Action_Score__c</fullName>
    <label>Action Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>