force-app/main/default/objects/Audit_Severity__mdt/fields/Decay_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Decay_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this action&apos;s score impact decays over time (see scoring logic below)</description>
    <label>Decay Eligible</label>
    <type>Checkbox</type>
</CustomField>