force-app/main/default/objects/Audit_Severity__mdt/fields/Ignore__c.field-meta.xml
<CustomField>
    <fullName>Ignore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ignore the audit trail record if this config matches.</description>
    <label>Ignore</label>
    <type>Checkbox</type>
</CustomField>