force-app/main/default/objects/Audit_Severity__mdt/fields/Impact_Description__c.field-meta.xml
<CustomField>
    <fullName>Impact_Description__c</fullName>
    <description>Human-readable explanation for case/email display</description>
    <label>Impact Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>