force-app/main/default/objects/Audit_Severity__mdt/fields/Is_Security_Relevant__c.field-meta.xml
<CustomField>
    <fullName>Is_Security_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Quick filter — excludes cosmetic/UI-only actions from scoring entirely</description>
    <label>Is Security Relevant</label>
    <type>Checkbox</type>
</CustomField>