force-app/main/default/objects/Audit_Severity__mdt/fields/Regex_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Regex_Pattern__c</fullName>
    <description>The regex to match against Action__c</description>
    <label>Regex Pattern</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>