force-app/main/default/objects/Audit_Severity__mdt/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <description>Optional — narrows match to a specific Audit Trail section</description>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>