force-app/main/default/objects/Audit_Severity__mdt/fields/Security_Impact_Category__c.field-meta.xml
<CustomField>
    <fullName>Security_Impact_Category__c</fullName>
    <label>Security Impact Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access Control</fullName>
                <default>true</default>
                <label>Access Control</label>
            </value>
            <value>
                <fullName>Data Exposure</fullName>
            </value>
            <value>
                <fullName>Code Execution</fullName>
            </value>
            <value>
                <fullName>Authentication</fullName>
            </value>
            <value>
                <fullName>Configuration Drift</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>