force-app/main/default/objects/Audit_Severity__mdt/fields/Security_Weight__c.field-meta.xml
<CustomField>
    <fullName>Security_Weight__c</fullName>
    <description>Points deducted from the org score per occurrence (0–25)</description>
    <label>Security Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>