force-app/main/default/objects/Audit_Severity__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>he severity classification assigned to this action code when it appears in the Setup Audit Trail. Drives prioritization, alerting, and compliance reporting on the Audit_Trail__c object. Accepted values are LOW (routine or informational activity), MEDIUM (notable but low-risk change), HIGH (significant configuration or access change requiring review), and CRITICAL (high-risk change that may indicate a compliance violation or unauthorized access and should trigger immediate escalation).</description>
    <inlineHelpText>he severity classification assigned to this action code when it appears in the Setup Audit Trail. Drives prioritization, alerting, and compliance reporting on the Audit_Trail__c object. Accepted values are LOW (routine or informational activity), MEDIUM (notable but low-risk change), HIGH (significant configuration or access change requiring review), and CRITICAL (high-risk change that may indicate a compliance violation or unauthorized access and should trigger immediate escalation).</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LOW</fullName>
                <default>true</default>
                <label>LOW</label>
            </value>
            <value>
                <fullName>MEDIUM</fullName>
            </value>
            <value>
                <fullName>HIGH</fullName>
            </value>
            <value>
                <fullName>CRITICAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>