force-app/main/default/objects/Audit_Severity__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Active__c</columns>
    <columns>Regex_Pattern__c</columns>
    <columns>Section__c</columns>
    <columns>Severity__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>